@@ -54,6 +54,9 @@ JHtml::_('behavior.formvalidation');
 		
 		<?php echo $this->form->getLabel('language'); ?>
 		<?php echo $this->form->getInput('language'); ?>
+		
+		<?php echo $this->form->getLabel('featured'); ?>
+		<?php echo $this->form->getInput('featured'); ?>
 
 		<div class="clr"></div>
 		<?php echo $this->form->getLabel('articletext'); ?>
