@@ -6,21 +6,21 @@
 
 COM_PLUGINS_CONFIGURATION="Plug-in Manager Options"
 
-PLUGN_MANAGER_PLUGINS="Plug-in Manager: Plug-ins"
-PLUGN_MANAGER_PLUGIN="Plug-in Manager: Plug-in"
+COM_PLUGINS_MANAGER_PLUGINS="Plug-in Manager: Plug-ins"
+COM_PLUGINS_MANAGER_PLUGIN="Plug-in Manager: Plug-in"
 
-PLUGN_OPTION_FOLDER="- Select Type -"
-PLUGN_SEARCH_IN_TITLE="Search in plug-in title."
+COM_PLUGINS_OPTION_FOLDER="- Select Type -"
+COM_PLUGINS_SEARCH_IN_TITLE="Search in plug-in title."
 
-PLUGN_ELEMENT_HEADING="Element"
-PLUGN_FOLDER_HEADING="Type"
-PLUGN_NAME_HEADING="Plug-in Name"
+COM_PLUGINS_ELEMENT_HEADING="Element"
+COM_PLUGINS_FOLDER_HEADING="Type"
+COM_PLUGINS_NAME_HEADING="Plug-in Name"
 
-PLUGN_XML_DESC="Description"
-PLUGN_XML_ERR="Plugins XML data not available"
-PLUGN_FIELD_NAME_DESC="Plug-in Name Desc"
-PLUGN_FIELD_NAME_LABEL="Plug-in Name"
-PLUGN_FIELD_ELEMENT_DESC="Field Element Desc"
-PLUGN_FIELD_ELEMENT_LABEL="Plug-in File"
-PLUGN_FIELD_FOLDER_DESC="Field Folder Desc"
-PLUGN_FIELD_FOLDER_LABEL="Plug-in Type"
+COM_PLUGINS_XML_DESCRIPTION="Description"
+COM_PLUGINS_XML_ERR="Plugins XML data not available"
+COM_PLUGINS_FIELD_NAME_DESC="Plug-in Name Desc"
+COM_PLUGINS_FIELD_NAME_LABEL="Plug-in Name"
+COM_PLUGINS_FIELD_ELEMENT_DESC="Field Element Desc"
+COM_PLUGINS_FIELD_ELEMENT_LABEL="Plug-in File"
+COM_PLUGINS_FIELD_FOLDER_DESC="Field Folder Desc"
+COM_PLUGINS_FIELD_FOLDER_LABEL="Plug-in Type"
