@@ -5,7 +5,7 @@
 ; Note : All ini files need to be saved as UTF-8
 
 TEMPLATE_BLUESTORK_DESC="BlueStork is a new template for the Joomla 1.6 administrator back-end."
-ENABLE/DISABLE ROUNDED CORNER EFFECT="Enable or disable the rounded corner effect for the template."
+ENABLE_DISABLE_ROUNDED_CORNER_EFFECT="Enable or disable the rounded corner effect for the template."
 BLUESTORK="BlueStork"
 SHOW SITE NAME="Show Site Name"
 SHOW THE SITE NAME IN THE TEMPLATE HEADER="Show the site name in the template header"
