@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+1-Feb-2010 Jean-Marie Simonet 
+^ Refactored com_plugins ini keys + some
+
 31-Jan-2010 Hannes Papenberg
 # Fixed group bug in JParameter - Thanks James Kennard
 - Removing unused images from administrator, including the /images folder
